Address a few deprecations